Adjust response code
